final change done

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;700&family=Inter:wght@400;500;700&family=KoHo:wght@400;500;600;700&family=Kumbh+Sans:wght@300;400;500&family=Lexend+Deca:wght@300;400;500&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
   <section class="main">
+    <div class="top-bg"></div>
+    <div class="bottom-bg"></div>
     <div class="container">
       <div class="upper-container"></div>
           <div class="img-sec"><img src="./images/image-victor.jpg" alt=""></div>
@@ -23,9 +28,5 @@
     </div>
     </div>
   </section>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.github.com/Willarry">Willarry</a>.
-  </div>
 </body>
 </html>
